hphp/hack/test/sound_dynamic/typing/generic_no_require_dynamic.bad.php.exp
File "generic_no_require_dynamic.bad.php", line 13, characters 19-21:
Method  `set` in class `D` is not dynamically callable. (Typing[4402])
  File "generic_no_require_dynamic.bad.php", line 13, characters 38-50:
  Invalid assignment
  File "generic_no_require_dynamic.bad.php", line 11, characters 9-9:
  Expected `T`
  File "generic_no_require_dynamic.bad.php", line 12, characters 39-39:
    via this generic `T`
  File "generic_no_require_dynamic.bad.php", line 13, characters 25-26:
  But got `dynamic` because method must be callable in a dynamic context
File "generic_no_require_dynamic.bad.php", line 17, characters 3-32:
Typing error (Typing[4110])
  File "generic_no_require_dynamic.bad.php", line 17, characters 26-32:
  Expected `dynamic`
  File "generic_no_require_dynamic.bad.php", line 17, characters 7-7:
  Type `C<mixed>` is not a subtype of `dynamic` under dynamic-aware subtyping
